--- a/css-modules-automation/codemod/package.json
+++ b/css-modules-automation/codemod/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"test": "npm run test:postcss && npm run test:codemod",
 		"test:postcss": "node -r ts-node/register src/postcss/__tests__/shell.ts",
-		"test:codemod": "node -r ts-node/register src/__tests__/codemod.ts"
+		"test:codemod": "node -r ts-node/register src/__tests__/codemod.ts",
+		"modify": "npx codemod -p src/index.ts input"
 	},
 	"keywords": [
 		"babel-plugin",
@@ -15,7 +16,7 @@
 		"babel-plugin-codemod"
 	],
 	"dependencies": {
-		"@babel/core": "^7.2.2",
+		"@babel/core": "^7.18.9",
 		"@babel/preset-react": "^7.0.0",
 		"@babel/preset-typescript": "^7.1.0",
 		"@babel/traverse": "^7.2.3",
@@ -36,5 +37,8 @@
 		"postcss-scss": "^2.0.0",
 		"ts-node": "^8.0.2",
 		"typescript": "^3.2.4"
+	},
+	"devDependencies": {
+		"@babel/plugin-proposal-optional-chaining": "^7.18.9"
 	}
 }
