--- a/css-modules-automation/codemod/package.json
+++ b/css-modules-automation/codemod/package.json
@@ -13,6 +13,7 @@
     "modify tests/divider": "npx codemod -p src/index.ts tests/Divider.jsx",
     "modify tests/anchor-list-item": "npx codemod -p src/index.ts tests/anchor-list-item.jsx",
     "modify tests/anchor-list-item-expression": "npx codemod -p src/index.ts tests/anchor-list-item-expression.jsx",
+    "modify tests/anchor-list-item-conditional": "npx codemod -p src/index.ts tests/anchor-list-item-conditional.jsx",
     "modify tests/combobox": "npx codemod -p src/index.ts tests/Combobox.jsx",
     "modify tests/toast": "npx codemod -p src/index.ts tests/Toast.jsx",
     "modify tests/sample-body": "npx codemod -p src/index.ts tests/sample-body",
