--- a/css-modules-automation/codemod/package.json
+++ b/css-modules-automation/codemod/package.json
@@ -25,7 +25,7 @@
     "babel-plugin-codemod"
   ],
   "dependencies": {
-    "@babel/core": "^7.18.9",
+    "@babel/core": "^7.0.0-beta.56",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@babel/traverse": "^7.2.3",
@@ -44,8 +44,8 @@
     "postcss-load-config": "^2.0.0",
     "postcss-modules": "^1.4.1",
     "postcss-scss": "^2.0.0",
-    "ts-node": "^8.0.2",
     "prettier": "^2.5.1",
+    "ts-node": "^8.0.2",
     "typescript": "^3.2.4"
   },
   "devDependencies": {
