--- a/css-modules-automation/codemod/package.json
+++ b/css-modules-automation/codemod/package.json
@@ -17,6 +17,7 @@
     "modify tests/anchor-list-item-no-such-style": "npx codemod -p src/index.ts tests/anchor-list-item-no-such-style.jsx",
     "modify tests/anchor-list-item-cx": "npx codemod -p src/index.ts tests/anchor-list-item-cx.jsx",
     "modify tests/anchor-list-item-classnames": "npx codemod -p src/index.ts tests/anchor-list-item-classnames.jsx",
+    "modify tests/anchor-list-item-multiple-classes": "npx codemod -p src/index.ts tests/anchor-list-item-multiple-classes.jsx",
     "modify tests/combobox": "npx codemod -p src/index.ts tests/Combobox.jsx",
     "modify tests/toast": "npx codemod -p src/index.ts tests/Toast.jsx",
     "modify tests/sample-body": "npx codemod -p src/index.ts tests/sample-body",
