--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.47.0",
   "description": "Official monday.com UI resources for application development in React.js",
   "main": "dist/main.js",
-  "module": "src/index.js",
+  "module": "dist/esm.js",
   "scripts": {
     "auto:bump-patch": "node scripts/autobump_patch.js",
     "auto:bump-minor": "node scripts/autobump_minor.js",
