--- a/css-modules-automation/codemod/package.json
+++ b/css-modules-automation/codemod/package.json
@@ -52,6 +52,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.18.9",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
-    "postcss-nested": "^5.0.6"
+    "postcss-nested": "^5.0.6",
+    "postcss-prettify": "^0.3.4"
   }
 }
