--- a/css-modules-automation/codemod/package.json
+++ b/css-modules-automation/codemod/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "scripts": {
     "modify react-core": "npx codemod -p src/index.ts ../../src/components",
+    "modify react-core/accordion": "npx codemod -p src/index.ts ../../src/components/Accordion",
+    "modify react-core/avatar": "npx codemod -p src/index.ts ../../src/components/Avatar/Avatar.jsx",
     "modify react-core/steps-header": "npx codemod -p src/index.ts ../../src/components/Steps/StepsHeader.jsx",
     "modify react-core/color-picker-item-component": "npx codemod -p src/index.ts ../../src/components/ColorPicker/components/ColorPickerItemComponent",
 
