--- a/css-modules-automation/codemod/package.json
+++ b/css-modules-automation/codemod/package.json
@@ -8,6 +8,7 @@
     "modify react-core": "npx codemod -p src/index.ts ../../src/components",
     "modify react-core/accordion": "npx codemod -p src/index.ts ../../src/components/Accordion",
     "modify react-core/avatar": "npx codemod -p src/index.ts ../../src/components/Avatar/Avatar.jsx",
+    "modify react-core/attention-box": "npx codemod -p src/index.ts ../../src/components/AttentionBox/AttentionBox.jsx",
     "modify react-core/steps-header": "npx codemod -p src/index.ts ../../src/components/Steps/StepsHeader.jsx",
     "modify react-core/color-picker-item-component": "npx codemod -p src/index.ts ../../src/components/ColorPicker/components/ColorPickerItemComponent",
 
