--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Official monday.com UI resources for application development in React.js",
   "main": "./dist/main.js",
   "exports": {
+    "./package.json": "./package.json",
     ".": {
       "import": "./dist/esm.js",
       "default": "./dist/main.js"
