--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
     "stylelint-config-standard-scss": "^3.0.0",
     "svg2react-icon": "^3.1.178",
     "terser-webpack-plugin": "^5.3.0",
+    "ts-loader": "^9.3.1",
     "typescript": "^4.7.3",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.1",
