--- a/css-modules-automation/codemod/package.json
+++ b/css-modules-automation/codemod/package.json
@@ -5,56 +5,57 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "modify react-core": "npx codemod -p src/index.ts ../../src/components && prettier -w ../../src/components",
-    "modify react-core/accordion": "npx codemod -p src/index.ts ../../src/components/Accordion && prettier -w ../../src/components/Accordion",
-    "modify react-core/avatar": "npx codemod -p src/index.ts ../../src/components/Avatar/Avatar.jsx && prettier -w ../../src/components/Avatar/Avatar.jsx",
-    "modify react-core/attention-box": "npx codemod -p src/index.ts ../../src/components/AttentionBox/AttentionBox.jsx && prettier -w ../../src/components/AttentionBox/AttentionBox.jsx",
-    "modify react-core/alert-banner": "npx codemod -p src/index.ts ../../src/components/AlertBanner/AlertBanner.jsx && prettier -w ../../src/components/AlertBanner/AlertBanner.jsx",
-    "modify react-core/clickable": "npx codemod -p src/index.ts ../../src/components/Clickable/Clickable.jsx && prettier -w ../../src/components/Clickable/Clickable.jsx ",
-    "modify react-core/steps-header": "npx codemod -p src/index.ts ../../src/components/Steps/StepsHeader.jsx && prettier -w ../../src/components/Steps/StepsHeader.jsx",
-    "modify react-core/color-picker-item-component": "npx codemod -p src/index.ts ../../src/components/ColorPicker/components/ColorPickerItemComponent && prettier -w ../../src/components/ColorPicker/components/ColorPickerItemComponent",
-    "modify react-core/dialog-content-container": "npx codemod -p src/index.ts ../../src/components/DialogContentContainer/DialogContentContainer.jsx && prettier -w ../../src/components/DialogContentContainer/DialogContentContainer.jsx",
-    "modify react-core/mock-toggle": "npx codemod -p src/index.ts ../../src/components/Toggle/MockToggle.jsx && prettier -w ../../src/components/Toggle/MockToggle.jsx",
-    "modify react-core/steps-command": "npx codemod -p src/index.ts ../../src/components/Steps/StepsCommand.jsx && prettier -w ../../src/components/Steps/StepsCommand.jsx",
-    "modify react-core/tooltip": "npx codemod -p src/index.ts ../../src/components/Tooltip/Tooltip.jsx && prettier -w ../../src/components/Tooltip/Tooltip.jsx",
-    "modify react-core/toast-link": "npx codemod -p src/index.ts ../../src/components/Toast/ToastLink/ToastLink.jsx && prettier -w ../../src/components/Toast/ToastLink/ToastLink.jsx",
-    "modify react-core/tipseen-image": "npx codemod -p src/index.ts ../../src/components/Tipseen/TipseenImage.jsx && prettier -w ../../src/components/Tipseen/TipseenImage.jsx",
-    "modify react-core/tipseen-basic-content": "npx codemod -p src/index.ts ../../src/components/Tipseen/TipseenBasicContent.jsx && prettier -w ../../src/components/Tipseen/TipseenBasicContent.jsx",
-    "modify react-core/tab": "npx codemod -p src/index.ts ../../src/components/Tabs/Tab/Tab.jsx && prettier -w ../../src/components/Tabs/Tab/Tab.jsx",
-    "modify react-core/button": "npx codemod -p src/index.ts ../../src/components/Button/Button.jsx && prettier -w ../../src/components/Button/Button.jsx",
-    "modify react-core/counter": "npx codemod -p src/index.ts ../../src/components/Counter/Counter.jsx && prettier -w ../../src/components/Counter/Counter.jsx",
-    "modify react-core/combobox-option": "npx codemod -p src/index.ts ../../src/components/Combobox/components/ComboboxOption/ComboboxOption.jsx && prettier -w ../../src/components/Combobox/components/ComboboxOption/ComboboxOption.jsx",
+    "modify react-core": "shell_scripts/run.sh ../../src/components",
+    "modify react-core/run-accordion": "shell_scripts/run.sh ../../src/components/Accordion",
+    "modify react-core/accordion": "shell_scripts/run.sh ../../src/components/Accordion",
+    "modify react-core/avatar": "shell_scripts/run.sh ../../src/components/Avatar/Avatar.jsx",
+    "modify react-core/attention-box": "shell_scripts/run.sh ../../src/components/AttentionBox/AttentionBox.jsx",
+    "modify react-core/alert-banner": "shell_scripts/run.sh ../../src/components/AlertBanner/AlertBanner.jsx",
+    "modify react-core/clickable": "shell_scripts/run.sh ../../src/components/Clickable/Clickable.jsx ",
+    "modify react-core/steps-header": "shell_scripts/run.sh ../../src/components/Steps/StepsHeader.jsx",
+    "modify react-core/color-picker-item-component": "shell_scripts/run.sh ../../src/components/ColorPicker/components/ColorPickerItemComponent",
+    "modify react-core/dialog-content-container": "shell_scripts/run.sh ../../src/components/DialogContentContainer/DialogContentContainer.jsx",
+    "modify react-core/mock-toggle": "shell_scripts/run.sh ../../src/components/Toggle/MockToggle.jsx",
+    "modify react-core/steps-command": "shell_scripts/run.sh ../../src/components/Steps/StepsCommand.jsx",
+    "modify react-core/tooltip": "shell_scripts/run.sh ../../src/components/Tooltip/Tooltip.jsx",
+    "modify react-core/toast-link": "shell_scripts/run.sh ../../src/components/Toast/ToastLink/ToastLink.jsx",
+    "modify react-core/tipseen-image": "shell_scripts/run.sh ../../src/components/Tipseen/TipseenImage.jsx",
+    "modify react-core/tipseen-basic-content": "shell_scripts/run.sh ../../src/components/Tipseen/TipseenBasicContent.jsx",
+    "modify react-core/tab": "shell_scripts/run.sh ../../src/components/Tabs/Tab/Tab.jsx",
+    "modify react-core/button": "shell_scripts/run.sh ../../src/components/Button/Button.jsx",
+    "modify react-core/counter": "shell_scripts/run.sh ../../src/components/Counter/Counter.jsx",
+    "modify react-core/combobox-option": "shell_scripts/run.sh ../../src/components/Combobox/components/ComboboxOption/ComboboxOption.jsx",
 
-    "modify react-core/menu-button": "npx codemod -p src/index.ts ../../src/components/MenuButton/MenuButton.jsx && prettier -w ../../src/components/MenuButton/MenuButton.jsx",
-    "modify react-core/slider-base": "npx codemod -p src/index.ts ../../src/components/Slider/SliderBase/SliderBase.jsx && prettier -w ../../src/components/Slider/SliderBase/SliderBase.jsx",
-    "modify react-core/slider": "npx codemod -p src/index.ts ../../src/components/Slider/Slider.jsx && prettier -w ../../src/components/Slider/Slider.jsx",
-    "modify react-core/list-item": "npx codemod -p src/index.ts ../../src/components/ListItem/ListItem.jsx && prettier -w ../../src/components/ListItem/ListItem.jsx",
+    "modify react-core/menu-button": "shell_scripts/run.sh ../../src/components/MenuButton/MenuButton.jsx",
+    "modify react-core/slider-base": "shell_scripts/run.sh ../../src/components/Slider/SliderBase/SliderBase.jsx",
+    "modify react-core/slider": "shell_scripts/run.sh ../../src/components/Slider/Slider.jsx",
+    "modify react-core/list-item": "shell_scripts/run.sh ../../src/components/ListItem/ListItem.jsx",
 
-    "modify react-core/button-group": "npx codemod -p src/index.ts ../../src/components/ButtonGroup/ButtonGroup.jsx && prettier -w ../../src/components/ButtonGroup/ButtonGroup.jsx",
-    "modify react-core/radio-button": "npx codemod -p src/index.ts ../../src/components/RadioButton/RadioButton.jsx && prettier -w ../../src/components/RadioButton/RadioButton.jsx",
-    "modify react-core/responsive-list": "npx codemod -p src/index.ts ../../src/components/ResponsiveList/ResponsiveList.jsx && prettier -w ../../src/components/ResponsiveList/ResponsiveList.jsx",
-    "modify react-core/toggle": "npx codemod -p src/index.ts ../../src/components/Toggle/Toggle.jsx && prettier -w ../../src/components/Toggle/Toggle.jsx",
-    "modify react-core/steps": "npx codemod -p src/index.ts ../../src/components/Steps/Steps.jsx && prettier -w ../../src/components/Steps/Steps.jsx",
+    "modify react-core/button-group": "shell_scripts/run.sh ../../src/components/ButtonGroup/ButtonGroup.jsx",
+    "modify react-core/radio-button": "shell_scripts/run.sh ../../src/components/RadioButton/RadioButton.jsx",
+    "modify react-core/responsive-list": "shell_scripts/run.sh ../../src/components/ResponsiveList/ResponsiveList.jsx",
+    "modify react-core/toggle": "shell_scripts/run.sh ../../src/components/Toggle/Toggle.jsx",
+    "modify react-core/steps": "shell_scripts/run.sh ../../src/components/Steps/Steps.jsx",
 
-    "modify react-core/tipseen": "npx codemod -p src/index.ts ../../src/components/Tipseen/Tipseen.jsx && prettier -w ../../src/components/Tipseen/Tipseen.jsx",
-    "modify react-core/dialog-content": "npx codemod -p src/index.ts ../../src/components/Dialog/DialogContent/DialogContent.jsx && prettier -w ../../src/components/Dialog/DialogContent/DialogContent.jsx",
+    "modify react-core/tipseen": "shell_scripts/run.sh ../../src/components/Tipseen/Tipseen.jsx",
+    "modify react-core/dialog-content": "shell_scripts/run.sh ../../src/components/Dialog/DialogContent/DialogContent.jsx",
 
     
-    "modify tests": "npx codemod -p src/index.ts tests && prettier -w tests",
-    "modify tests/divider": "npx codemod -p src/index.ts tests/Divider.jsx && prettier -w tests/Divider.jsx",
-    "modify tests/avatar": "npx codemod -p src/index.ts tests/Avatar.jsx && prettier -w tests/Avatar.jsx",
-    "modify tests/anchor-list-item": "npx codemod -p src/index.ts tests/anchor-list-item.jsx && prettier -w tests/anchor-list-item.jsx",
-    "modify tests/anchor-list-item-expression": "npx codemod -p src/index.ts tests/anchor-list-item-expression.jsx && prettier -w tests/anchor-list-item-expression.jsx",
-    "modify tests/anchor-list-item-conditional": "npx codemod -p src/index.ts tests/anchor-list-item-conditional.jsx && prettier -w tests/anchor-list-item-conditional.jsx",
-    "modify tests/anchor-list-item-no-such-style": "npx codemod -p src/index.ts tests/anchor-list-item-no-such-style.jsx && prettier -w tests/anchor-list-item-no-such-style.jsx",
-    "modify tests/anchor-list-item-cx": "npx codemod -p src/index.ts tests/anchor-list-item-cx.jsx && prettier -w tests/anchor-list-item-cx.jsx",
-    "modify tests/anchor-list-item-classnames": "npx codemod -p src/index.ts tests/anchor-list-item-classnames.jsx && prettier -w tests/anchor-list-item-classnames.jsx",
-    "modify tests/anchor-list-item-multiple-classes": "npx codemod -p src/index.ts tests/anchor-list-item-multiple-classes.jsx && prettier -w tests/anchor-list-item-multiple-classes.jsx",
-    "modify tests/anchor-list-item-const-base-class": "npx codemod -p src/index.ts tests/anchor-list-item-const-base-class.jsx && prettier -w tests/anchor-list-item-const-base-class.jsx",
-    "modify tests/combobox": "npx codemod -p src/index.ts tests/Combobox.jsx && prettier -w tests/Combobox.jsx",
-    "modify tests/toast": "npx codemod -p src/index.ts tests/Toast.jsx && prettier -w tests/Toast.jsx",
-    "modify tests/sample-body": "npx codemod -p src/index.ts tests/sample-body && prettier -w tests/sample-body",
-    "modify tests/sample-button": "npx codemod -p src/index.ts tests/sample-button && prettier -w tests/sample-button"
+    "modify tests": "shell_scripts/run.sh tests",
+    "modify tests/divider": "shell_scripts/run.sh tests/Divider.jsx",
+    "modify tests/avatar": "shell_scripts/run.sh tests/Avatar.jsx",
+    "modify tests/anchor-list-item": "shell_scripts/run.sh tests/anchor-list-item.jsx",
+    "modify tests/anchor-list-item-expression": "shell_scripts/run.sh tests/anchor-list-item-expression.jsx",
+    "modify tests/anchor-list-item-conditional": "shell_scripts/run.sh tests/anchor-list-item-conditional.jsx",
+    "modify tests/anchor-list-item-no-such-style": "shell_scripts/run.sh tests/anchor-list-item-no-such-style.jsx",
+    "modify tests/anchor-list-item-cx": "shell_scripts/run.sh tests/anchor-list-item-cx.jsx",
+    "modify tests/anchor-list-item-classnames": "shell_scripts/run.sh tests/anchor-list-item-classnames.jsx",
+    "modify tests/anchor-list-item-multiple-classes": "shell_scripts/run.sh tests/anchor-list-item-multiple-classes.jsx",
+    "modify tests/anchor-list-item-const-base-class": "shell_scripts/run.sh tests/anchor-list-item-const-base-class.jsx",
+    "modify tests/combobox": "shell_scripts/run.sh tests/Combobox.jsx",
+    "modify tests/toast": "shell_scripts/run.sh tests/Toast.jsx",
+    "modify tests/sample-body": "shell_scripts/run.sh tests/sample-body",
+    "modify tests/sample-button": "shell_scripts/run.sh tests/sample-button"
   },
   "keywords": [
     "babel-plugin",
