--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,23 @@
 {
-  "compilerOptions": {
-    "lib": ["esnext", "dom"],
-    "allowJs": true,
-    "target": "es6",
-    "module": "commonjs",
-    "sourceMap": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "strict": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "declaration": true,
-    "skipLibCheck": true,
-    "noImplicitAny": true,
-    "outDir": "dist",
-    "baseUrl": ".",
-    "allowSyntheticDefaultImports": true,
-    "paths": {
-      "hooks/*": ["src/hooks/*"],
-      "utils/*": ["src/utils/*"],
-      "components/*": ["src/components/*"],
-      "constants/*": ["src/constants/*"]
+  // this root tsconfig just exists to compose sub-projects
+  "references": [
+    {
+      "path": "./src/hooks/"
     },
-    "jsx": "react-jsx"
-  },
-  "include": ["src/**/*"]
+    {
+      "path": "./src/utils/"
+    },
+    {
+      "path": "./src/components/"
+    },
+    {
+      "path": "./src/constants/"
+    },
+    {
+      "path": "./src/services/"
+    },
+    {
+      "path": "./src/helpers/"
+    }
+  ]
 }
