--- a/css-modules-automation/codemod/package.json
+++ b/css-modules-automation/codemod/package.json
@@ -5,6 +5,8 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
+    "modify files-from-list": "shell_scripts/run_for_files_list.sh",
+
     "modify react-core": "shell_scripts/run.sh ../../src/components",
     "modify react-core/accordion": "shell_scripts/run.sh ../../src/components/Accordion",
     "modify react-core/avatar": "shell_scripts/run.sh ../../src/components/Avatar/Avatar.jsx",
